--- a/source/Tasks/Views/Tasks/Details.cshtml
+++ b/source/Tasks/Views/Tasks/Details.cshtml
@@ -10,11 +10,17 @@
     <h4>Task</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.JiraId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.JiraId)
         </dd>
     </dl>
 </div>
