--- a/source/Accounting/Views/Home/Index.cshtml
+++ b/source/Accounting/Views/Home/Index.cshtml
@@ -32,11 +32,11 @@
             <td>
                 @if (item.WrittenOff > 0)
                 {
-                    @($"-{item.WrittenOff}")
+                    @($"-{item.WrittenOff}$")
                 }
                 else
                 {
-                    @($"+{item.Accrued}")
+                    @($"+{item.Accrued}$")
                 }
             </td>
             <td>
