Статистика по дням, недели, месяцу

--- a/source/Analytics/Views/Home/Index.cshtml
+++ b/source/Analytics/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
     ViewData["Title"] = "Analytics";
 }
 
-<h4>How much top management earned today: @(Model.Bill)$</h4>
-<h4>How many parrots went negative: @(Model.NegativeParrots)</h4>
+<p>How much top management earned today: @(Model.Bill)$</p>
+<p>How many parrots went negative: @(Model.NegativeParrots)</p>
+<p>Most expensive day task: @(Model.MostExpensiveDayTask)</p>
+<p>Most expensive week task: @(Model.MostExpensiveWeekTask)</p>
+<p>Most expensive month task: @(Model.MostExpensiveMonthTask)</p>
