--- a/source/Tasks/Views/Tasks/Index.cshtml
+++ b/source/Tasks/Views/Tasks/Index.cshtml
@@ -13,7 +13,7 @@
 @if (User.IsInRole("Manager") || User.IsInRole("Administrator"))
 {
     <p>
-        <a asp-action="Assign">Assign</a>
+        <a asp-action="Assign">Put a bird in a cage</a>
     </p>
 }
 
@@ -27,10 +27,13 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Account)
+                @Html.DisplayNameFor(model => model.JiraId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Completed)
+                Bird in a cage
+            </th>
+            <th>
+                Millet in a bowl
             </th>
             <th></th>
         </tr>
@@ -38,25 +41,28 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PublicId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Account.Username)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Completed)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.TaskId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.TaskId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.TaskId">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.PublicId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JiraId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Account.Username)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Completed)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.TaskId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.TaskId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.TaskId">Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
